[package]
name = "map2mqtt"
version = "0.1.0"
publish = false
authors = ["Meno Abels <meno.abels@adviser.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.9.0"
tokio = "0.1.22"
tokio-tcp = "0.1.3"
log = "0.4.6"
futures = "0.1.29"
env_logger = "0.6.1"
uuid = { version = "0.8.1", features = ["v4"] }
evmap = "7.1.1"
#tokio = "0.2.0-alpha.6"
#bytes = "0.4.12"
#swym = "0.1.0-preview"
#zmq = "0.9"
#url = "2.0.0"

[dependencies.tungstenite]
version = "0.9.1"
default-features = false

#[features]
#vendored-zmq = ['zmq/vendored']
